--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -20,19 +20,16 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
-          pip install -r requirements.txt || pip install ruff pytest pandas numpy
+          pip install -r requirements.txt
 
       - name: Lint with ruff
-        run: |
-          ruff check .
+        run: ruff check .
 
-      - name: Lint with flake8
-        run: |
-          pip install flake8
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Check formatting with black
+        run: black --check .
 
       - name: Run pytest
-        run: |
-          pytest tests/ -v || echo "No tests directory found, skipping pytest"
+        env:
+          MOCK_MODE: "true"
+        run: pytest tests/ -v
 
